--- a/index.html
+++ b/index.html
@@ -268,9 +268,7 @@
                         </div>
                   
                       <div class="card-back" style='background-color: #000;'>
-                        <p>A NoSQL project developed to explore the Stack Overflow Developer Survey 2022
-                            which was conducted in May 2022 with over 70,000 responses,to understand and get some insights of all the software experience from learning to 
-                            code to their favourite technologies.
+                        <p>This project explores the dynamic landscape of the contemporary music industry by integrating social media analysis and data science methodologies, utilizing Reddit and Spotify APIs by uncovering pattern and providing real-time information and trending artists.
                            <small class="text-muted">
                             <code>&nbsp &nbsp MongoDB Python3 Faktory Flask</code></small>
                         </p>
