--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             Currently, I'm a graduate student in Computer Science at The State University of New York, Binghamton.<br><br><br>
         </p>
         <div class="btn-con">
-        <a href="img/Resume_Disha.pdf" class="main-btn" download="ResumeDisha">
+        <a href="img/Disha-Shetty.pdf" class="main-btn" download="ResumeDisha">
             <span class="btn-text">Checkout My Resume</span>
             <span class="btn-icon"><i class="fas fa-download"></i></span>
         </a>
