--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
     <title>Disha Shetty</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.jpg">
     
 <link rel="stylesheet" href="style/style.css"></link>
 <link rel="preconnect" href="https://fonts.googleapis.com">
