--- a/index.html
+++ b/index.html
@@ -70,13 +70,20 @@
                 <div class="left-about">
                    <p class="paragraph-cont"> 
                     Hey! I am Disha Shetty, a passionate and motivated Full Stack Developer with a Bachelor's degree in Computer Science and 3 years of 
-                    valuable work experience at a Service Based Company. My expertise lies in the Telecom market, where I have honed my skills in Activation and Deactivation of Plans, 
-                    displaying usage information (minutes and internet speed), PrePaid to Postpaid Conversion, Payment Journeys, Work Orders, API integration, and creating user interactive experiences using tools such as Oracle WebCenter Sites.
-                    My key qualities are  <b>Strong problem-solving skills</b>- I thrive in challenging situations and enjoy finding innovative solutions to complex problems,
+                    valuable work experience at a Service Based Company. 
+                    <!--<b>Strong problem-solving skills</b>- I thrive in challenging situations and enjoy finding innovative solutions to complex problems,
                     <b>Quick knowledge grasping capabilities</b>- My ability to learn and adapt rapidly has allowed me to excel in dynamic work environments, 
-                    <b>Full Stack Proficiency</b> - Equipped with expertise in both frontend and backend development, I can deliver end-to-end solutions with ease.
-                    I am currently seeking summer internship opportunities in the position of a Software Developer. My dedication and passion for software development, coupled with my technical skills and previous work experience, 
-                    makes me a valuable asset for any team.
+                    <b>Full Stack Proficiency</b> - Equipped with expertise in both frontend and backend development, I can deliver end-to-end solutions with ease.-->
+                    <br><b>🚀 Proficient in Web Development:</b>
+                    Embarking on my journey at Atos Syntel, I've evolved into a specialist in crafting responsive Vue.js front-end applications. Leveraging Oracle as a database alongside Oracle WebCenter Sites for Content Management System, I've honed my skills in delivering tailored websites using HTML, CSS, and Javascript. By integrating REST APIs, I enhance user experiences by seamlessly displaying backend responses, including details on existing data plans, remaining voice minutes, and additional bundles such as Amazon or Netflix subscriptions. Additionally, I adeptly design JSON for data transformation and utilize jQuery functions to efficiently call APIs.
+
+                    <br><b>⚙️ Expertise in Back-End Development:</b>
+                    Beyond front-end proficiency, my expertise extends to robust back-end development employing Java, Spring Boot, and Hibernate. I've demonstrated proficiency in deploying and maintaining Java-based web applications across various stages, from development through pre-production testing to real-time production environments. Specializing in the creation of decoupled Java-based RESTful APIs, I prioritize Object-Oriented Design principles, and handle JSON and XML serialization seamlessly, including converting XML from DSL to Java.
+
+                    <br><b>💻 Solution Design:</b>
+                    Collaborating closely with solution designers, I've contributed significantly to developing solutions tailored to telecom industry requirements across multiple domains, including Self-care, DSL integration, DSP, CRM, and more. These experiences have enriched my understanding of solution architecture and implementation within dynamic telecom environments.
+                    Driven by a passion for technological innovation, I thrive in collaborative settings where I can contribute to creating exceptional digital experiences. Let's connect and explore opportunities to innovate and excel together!
+
                 </p>
                 </div>
 
@@ -122,8 +129,8 @@
                     <h2 class="me">Education and <span class="exp">Experience.</span><span class="bg-text">Timeline</span></h2>
                 </div><br> <br>
                 <ul>
-                    <li style="--accent-color:#8A307F">
-                        <div class="date">2022-2024</div>
+                    <!--<li style="--accent-color:#8A307F">
+                        <div class="date">Auguest 2022 - May 2024</div>
                             <div class="title">
                             <div id="logos">
                                 <img src="img/binghamtonlogo.png" class="logos" alt="BU" />    
@@ -134,11 +141,40 @@
                         text-justify: inter-word;">
                             Currently enrolled in Master's degree majoring in Computer Science.<br> 
                             Relevant course work:<br>
-                            Design and Analysis of Algorithm,Operating Systems,Programming Languages,Design Patterns, Intoduction to Cloud Computing, Database Systems, Social Media and Pipeline, Computer Security. 
+                            Design and Analysis of Algorithm,
+                            Operating Systems,
+                            Programming Languages,
+                            Design Patterns, 
+                            Intoduction to Cloud Computing, 
+                            Database Systems, 
+                            Social Media and Data Science Pipeline, 
+                            Introduction to Computer Security. 
+                        </div>
+                    </li>-->
+                    <li style="--accent-color:#8A307F">
+                        <div class="date">Auguest 2022 - May 2024</div>
+                            <div class="title">
+                            <div id="logos">
+                                <img src="img/binghamtonlogo.png" class="logos" alt="BU" />    
+                            <a href="https://www.binghamton.edu/">State University of New York, Binghamton </a>
+                            <i class="fa-solid fa-user-graduate"></i>
+                        </div></div>
+                        <div class="descr" style="font-size:0.9rem; text-align: justify;
+                        text-justify: inter-word;">
+                            Currently enrolled in Master's degree majoring in Computer Science.<br> 
+                            Relevant course work:<br>
+                            Design and Analysis of Algorithm,
+                            Operating Systems,
+                            Programming Languages,
+                            Design Patterns, 
+                            Intoduction to Cloud Computing, 
+                            Database Systems, 
+                            Social Media and Data Science Pipeline, 
+                            Introduction to Computer Security. 
                         </div>
                     </li>
                     <li style="--accent-color:#b650aa">
-                        <div class="date">2020-2022</div>
+                        <div class="date">September 2019 - July 2022</div>
                         <div class="title">
                             <div id="logos">
                                 <img src="img/atos.png" class="logos" alt="Atos" />
@@ -153,7 +189,7 @@
                         </div>
                     </li>
                     <li style="--accent-color:#9340B0">
-                        <div class="date">2015-2019</div>
+                        <div class="date">July 2015 - May 2019</div>
                         <div class="title">
                             <div id="logos">
                                 <img src="img/MumbaiUni.jpeg" class="logos" alt="Mumbai" />
@@ -167,7 +203,7 @@
                         </div>
                     </li>
                     <li style="--accent-color:#af72a8">
-                        <div class="date">June 2019-July 2019</div>
+                        <div class="date">June 2019 - August 2019</div>
                         <div class="title"><div id="logos">
                             <img src="img/westech-logo.jpeg" class="logos" alt="WesTech" />
                             <a href=https://www.westech-inc.com/contact-us/india>WesTech Pvt.Ltd</a>
