Changes in Portfolio

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             I'm a software engineer who enjoys developing web applications.... i mean it, REALLY. 
             I am an enthusiastic, meticulous Computer Science Engineer and I enjoy tackling complex problems and find solutions. 
             I like working in a team and love learning new technologies, even though being a beginner and working from scratch. 
-            Currently, I'm a graduate student in Computer Science at The State University of New York, Binghamton.<br><br><br>
+            Currently I hold a Masters Degree in Computer Science from State University of New York at Binghamton and currently looking for full time 
+            opportunities.<br><br><br>
         </p>
         <div class="btn-con">
         <a href="img/Disha-Shetty.pdf" class="main-btn" download="ResumeDisha">
@@ -129,28 +130,22 @@
                     <h2 class="me">Education and <span class="exp">Experience.</span><span class="bg-text">Timeline</span></h2>
                 </div><br> <br>
                 <ul>
-                    <!--<li style="--accent-color:#8A307F">
-                        <div class="date">Auguest 2022 - May 2024</div>
+                    <li style="--accent-color:#9340B0">
+                        <div class="date">January 2024 - May 2024</div>
                             <div class="title">
                             <div id="logos">
-                                <img src="img/binghamtonlogo.png" class="logos" alt="BU" />    
-                            <a href="https://www.binghamton.edu/">State University of New York, Binghamton </a>
-                            <i class="fa-solid fa-user-graduate"></i>
+                                <img src="img/creatrify.webp" class="logos" alt="BU" />    
+                            <a href="https://creatrify.com/">Creatrify </a>
+                            <i class="fa-solid fa-briefcase"></i>
                         </div></div>
                         <div class="descr" style="font-size:0.9rem; text-align: justify;
                         text-justify: inter-word;">
-                            Currently enrolled in Master's degree majoring in Computer Science.<br> 
-                            Relevant course work:<br>
-                            Design and Analysis of Algorithm,
-                            Operating Systems,
-                            Programming Languages,
-                            Design Patterns, 
-                            Intoduction to Cloud Computing, 
-                            Database Systems, 
-                            Social Media and Data Science Pipeline, 
-                            Introduction to Computer Security. 
+                             I developed new features on the website's homepage using Angular 15, enabling users to purchase one-on-one sessions, 
+                             schedule live streams, and receive mobile notifications about offers. By implementing lazy loading, I improved frontend performance, reducing page load times by 25%. I collaborated with UI/UX designers and backend developers to integrate APIs and services, 
+                             using Atlassian Jira and Bitbucket to identify and address defects, 
+                             and presented potential solutions to the leadership team and CEO.
                         </div>
-                    </li>-->
+                    </li>
                     <li style="--accent-color:#8A307F">
                         <div class="date">August 2022 - May 2024</div>
                             <div class="title">
@@ -161,16 +156,12 @@
                         </div></div>
                         <div class="descr" style="font-size:0.9rem; text-align: justify;
                         text-justify: inter-word;">
-                            Currently enrolled in Master's degree majoring in Computer Science.<br> 
-                            Relevant course work:<br>
-                            Design and Analysis of Algorithm,
-                            Operating Systems,
-                            Programming Languages,
-                            Design Patterns, 
-                            Intoduction to Cloud Computing, 
-                            Database Systems, 
-                            Social Media and Data Science Pipeline, 
-                            Introduction to Computer Security. 
+                            I have a master's degree in Computer Science from Binghamton University, 
+                            graduated in May 2024. Through several coursework , 
+                            I have inculcated in computer science concepts, algorithms, and programming languages such as Java, 
+                            Python, and C++. I have also opted and done projects in database management, data analysis, and software development methodologies.
+                            My coursework included Data Analysis and Algorithms, Programming Languages, Cloud Computing, Introduction to Computer Security and Operating Systems, which have allowed me to gain practical experience in areas such as cybersecurity, cloud computing, and distributed systems. 
+                            I have also collaborated on several projects, which have deepened my understanding of how computer science can be applied to solve real-world problems. 
                         </div>
                     </li>
                     <li style="--accent-color:#b650aa">
