--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p class="paragraph-cont"> 
                         Hi, I'm Disha! I turn bugs...well into more bugs (but I fix them always).
                         If it’s broken, I’ll debug it; if it’s perfect, I’ll overthink it.
-                        I am a software engineer with major fucus on frontend development. I love designing websites
+                        I am a software engineer with major focus on frontend development. I love designing websites
                         and being creative with it - I love playing with colors.
                         When free, I love catching up on my Netflix watch-list and at times do a little reading. 
                     </p>
